Fix an issue with html for task 5-12

--- a/05-12/index.html
+++ b/05-12/index.html
@@ -22,7 +22,7 @@
       >
     </section>
     <section class="exercise">
-      <h3>2. Покажите день недели</h3>
+      <h3>2. Исключить обратные ссылки</h3>
       <p>
         В простых случаях циклических ссылок мы можем исключить свойство, из-за
         которого они возникают, из сериализации по его имени.
